🚀 chore(package.json): update dependencies 🔧 fix(theme/base.css): simplify scrollbar styles 🔧 fix(theme/components.css): simplify progress bar animation

--- a/src/theme/base.css
+++ b/src/theme/base.css
@@ -77,16 +77,8 @@
         min-width: 110px;
         text-align: center;
     }
-    ::-webkit-scrollbar {
-        width: 6px;
-    }
-    ::-webkit-scrollbar-track {
-        background: var(--text-color);
-    }
-    ::-webkit-scrollbar-thumb {
-        background: var(--bg-link-btn);
-    }
-    ::-webkit-scrollbar-thumb:hover {
-        background: var(--color-shadow-dark);
-    }
+    ::-webkit-scrollbar {width: 6px;}
+    ::-webkit-scrollbar-track {background: var(--text-color);}
+    ::-webkit-scrollbar-thumb {background: var(--bg-link-btn);}
+    ::-webkit-scrollbar-thumb:hover {background: var(--color-shadow-dark);}
 }
