--- a/src/theme/components.css
+++ b/src/theme/components.css
@@ -6,18 +6,20 @@
                 0, 0.03, 0.14 4%, 0.94 17%, 1.08, 1.15, 1.16, 1.15 30%, 1.02 43%, 0.99,
                 0.98 51%, 0.97 57%, 1 77%, 1
         );
+        --grow-progress-animation: grow-progress auto linear;
+        --grow-progress-animation-timeline: scroll(y);
         --transition: 35ms;
         --transition-all: all 0.2s 0.1s ease-in-out;
     }
     .progress {
         position: fixed;
         left: 0; top: 0;
-        width: 100%; height: .2em;
+        width: 100%;
+        height: .2em;
         background: var(--bg-link-btn);
-
         transform-origin: 0 50%;
-        animation: grow-progress auto linear;
-        animation-timeline: scroll();
+        animation: var(--grow-progress-animation);
+        animation-timeline: var(--grow-progress-animation-timeline);
         z-index: 99990;
     }
     .theme-switch {
@@ -239,8 +241,8 @@
         100% {opacity: 1;}
     }
     @keyframes grow-progress {
-        from { transform: scaleX(0); }
-        to { transform: scaleX(1); }
+        from {transform: scaleX(0);}
+        to {transform: scaleX(1);}
     }
     @keyframes translateTop {
         0%,
